--- a/Step3/MathFunctions/CMakeLists.txt
+++ b/Step3/MathFunctions/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(MathFunctions MathFunctions.cxx)
 # TODO 1: State that anybody linking to MathFunctions needs to include the
 # current source directory, while MathFunctions itself doesn't.
 # Hint: Use target_include_directories with the INTERFACE keyword
-
+target_include_directories(MathFunctions INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 # should we use our own math functions
 option(USE_MYMATH "Use tutorial provided math implementation" ON)
 if (USE_MYMATH)
