--- a/Step3/CMakeLists.txt
+++ b/Step3/CMakeLists.txt
@@ -10,9 +10,11 @@ project(Tutorial VERSION 1.0)
 #   Hint: Use target_compile_features()
 
 # specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+   # set(CMAKE_CXX_STANDARD 11)
+   #set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+add_library(tutorial_compiler_flags INTERFACE)
+target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_11)
 # configure a header file to pass some of the CMake settings
 # to the source code
 configure_file(TutorialConfig.h.in TutorialConfig.h)
